[package]
name = "eye-tunes"
version = "0.1.0"
authors = ["main() <main@ehvag.de>"]

[dependencies]
dmap = "0.2"
eye-oPEner = { git = "https://github.com/main--/eye-oPEner.git" }
reqwest = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hyper = "0.10"
env_logger = "0.4"
plist = "0.2"
httpdate = "0.2"

#[replace]
#"dmap:0.2.0" = { path = "../rust-dmap" }
